plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.funeat'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    runtimeOnly 'com.mysql:mysql-connector-j'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.rest-assured:rest-assured:5.3.2'
    testRuntimeOnly 'com.h2database:h2'

    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
    implementation 'com.github.maricn:logback-slack-appender:1.4.0'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.547'

    implementation 'org.springframework.session:spring-session-jdbc'
}

tasks.named('test') {
    useJUnitPlatform()
}
